--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ input {
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: #fff;
+    background: #a3c2c2;
     margin: -4px 0 0 -4px;
 }
 .lds-roller div:nth-child(1) {
